kubernetes/myapp/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: myapp-service
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 32000
  type: NodePort
