kubernetes/myapp/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-demo-app.com
      http:
        paths:
          - path: /api/v1/msg
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
          - path: /api/v1/msg-db
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
status:
  loadBalancer: {}
